# DIME

./: .gitmodules  README.md
ESP32/: README.md
ESP32/inference/: CMakeLists.txt  README.md  sdkconfig.defaults
ESP32/inference/main/: main_functions.cc
ESP32/utilities/: README.md  data_stream.py
ESP32/wifi_communications/: README.md
ESP32/wifi_communications/main/: CMakeLists.txt  setup.h  tcp_client_main.c  tcp_client_v4.c
Nano 33/: README.md  blue.py  image_communication.ipynb
Nano33/: README.md  main_program.ino
edge/: README.md  imagenet_images.ipynb
edge/ESP32/: README.md  find_port.sh
edge/ESP32/MNIST/main/: LR.h  main_functions.cc  model.cc
edge/ESP32/inference/: README.md  sdkconfig.old
edge/ESP32/inference/main/: CMakeLists.txt  LR.h  main.cc  main_functions.cc  model.cc
edge/ESP32/utilities/: data_stream.py  tcp_server.c
edge/ESP32/wifi_communications/: README.md  sdkconfig  sdkconfig.defaults
edge/ESP32/wifi_communications/main/: image.h  tcp_client_v4.c
edge/Jetson_Nano/: README.md
edge/Jetson_Nano/inference/: CMakeLists.txt  README.md
edge/Jetson_Nano/inference/int8/: build_engine.py  image_batcher.py
edge/Jetson_Nano/inference/models/: EE_resnet56.onnx  EE_resnet56_2.onnx  EE_resnet8.onnx  resnet56_cifar.onnx  resnet8_cifar.onnx
edge/Jetson_Nano/inference/src/: analyze_results.py  inference.py  input_parser.h  logistic_regression.cpp  main.cpp  measurements.cpp  simulation.cpp  utils.h
edge/Jetson_Nano/offload/: CMakeLists.txt  README.md  analyze_results.py  main.cpp
edge/Jetson_Nano/offload/BLE/: README.md  server.py
edge/Jetson_Nano/wifi/: CMakeLists.txt  README.md
edge/Jetson_Nano/wifi/src/: main.cpp
edge/Nano 33/BLE_communication/: image.h  main.cpp
edge/Nano 33/Main_program/: LR.h  main_program.ino  quant_model.h
edge/Nano 33/Time_measurements/: time_measurements.ino
edge/Raspberry/: client2.py  utils.py
edge/Raspberry/offload/BLE/: README.md  bluetooth_constants.py  client.py
edge/coral/: .gitignore  CMakeLists.txt  README.md  cifar.cc  image.cc  imagenet.cc  system.cc  utils.cc
edge/coral/include/: cifar10_reader.h  image.h  imagenet_reader.h  logistic_regression.h  micro_model_runner.h  utils.h
edge/coral/scripts/: client.py
models/: EE_resnet56_threeheads.tflite  EE_resnet8.h5  EE_resnet8.tflite  EE_resnet8_twoheads.h5  EE_resnet8_twoheads.tflite  README.md  get_models.ipynb  resnet56.h5  resnet56_unquant.tflite  resnet8_quant_edgetpu.tflite  resnet8_unquant_edgetpu.tflite
models/CIFAR-10/: EE_resnet56.tflite  resnet56_quant.tflite  resnet56_quant_edgetpu.tflite  resnet56_unquant_edgetpu.tflite
server/: README.md  server.c  server.py  server_cifar.py  server_imagenet.py
